# sdk-generator

./: Makefile  README.md  pyproject.toml
.circleci/: config.yml
reference/: sdk_test.yaml
templates/python/: .openapi-generator-ignore  api_auth.handlebars  api_client.handlebars  api_metrics.handlebars  api_timeout.handlebars  check.handlebars  circleci.handlebars  config.yml  configuration.handlebars  publish.handlebars  pyproject.handlebars  requirements.handlebars  test-requirements.handlebars  tox.handlebars
