[tool.poetry]
name = "sdk-generator"
version = "0.1.0"
description = "sdk-generator to generate SDKs for services based on your OpenAPI specs. Based on OpenAPI generator project"
authors = ["SDK generator tech initiative"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
urllib3 = "^1.26.12"
certifi = "^2022.9.24"
typing-extensions = "^4.4.0"
frozendict = "^2.3.4"
python-dateutil = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
